# obsidian-cli

./: .gitignore  README.md  config.json  conftest.py  make.ps1  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  reset.ps1
configs/: home_config.json
obsidian_cli/: analyze.py  clean_uuid_key.py  cli.py  config_loader.py  create.py  ontology.py  scan.py  settings.py
obsidian_cli/commands/: analyze.py  create.py  hello.py  rebuild.py  scan.py  template_command.py  version.py
obsidian_cli/helpers/: classifiers.py  file_ops.py  key_prefixes.py  naming.py  obsidian.py  settings_loader.py
special restore operation/: log restore 1.txt  log restore 2.txt  restore.py  trouve_ko.py
tests/: test_classifiers.py  test_cli.py  test_config_loader.py  test_create.py  test_naming.py  test_ontology.py  test_scan.py  test_settings.py
vault/project/: new project.md
